--- a/universal_campaign_frontend/assets/error_config.json
+++ b/universal_campaign_frontend/assets/error_config.json
@@ -39,7 +39,7 @@
   },
   "content": {
     "siteTitle": "Error",
-    "faviconImagePath": "",
+    "faviconImagePath": "assets/Cerberus_Favicon.png",
     "homePage": {
       "heroTitle": "Error",
       "callToActionText": "",
