--- a/universal_campaign_frontend/assets/error_config.json
+++ b/universal_campaign_frontend/assets/error_config.json
@@ -99,7 +99,7 @@
       "content": ""
     },
     "commonAppBar": {
-      "logoPath": "",
+      "logoPath": "assets/images/error_placeholder.png",
       "logoWidth": 0,
       "logoHeight": 0,
       "navItems": []
