--- a/universal_campaign_frontend/pubspec.yaml
+++ b/universal_campaign_frontend/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_stripe: ^10.1.1
   provider: ^6.0.0
   get_it: ^7.2.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
