--- a/universal_campaign_frontend/assets/default_config.json
+++ b/universal_campaign_frontend/assets/default_config.json
@@ -10,7 +10,7 @@
     "secondaryColor": "#A01124",
     "backgroundColor": "#FFFFFF",
     "textColor": "#000000",
-    "fontFamily": "bebasNeue",
+    "fontFamily": "Bebas Neue",
     "secondaryFontFamily": "tinos",
     "issuesSectionTheme": {
       "backgroundColor": "#a01124",
