--- a/universal_campaign_frontend/pubspec.yaml
+++ b/universal_campaign_frontend/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   provider: ^6.0.0
   get_it: ^7.2.0
   google_fonts: ^6.2.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -35,3 +36,4 @@ flutter:
     - assets/
     - assets/images/
     - assets/logos/
+    - assets/icons/
