--- a/universal_campaign_frontend/assets/default_config.json
+++ b/universal_campaign_frontend/assets/default_config.json
@@ -171,6 +171,40 @@
         "emailOptInText": "I agree to receive emails from Elect Emmons",
         "buttonText": "Submit",
         "privacyButtonText": "Privacy Policy"
+      },
+      "donateWidget": {
+        "amounts": [25, 50, 100, 250, 500, 1000],
+        "customAmountLabel": "Custom Amount",
+        "continueButtonText": "Continue",
+        "firstNameLabel": "First Name",
+        "lastNameLabel": "Last Name",
+        "addressLine1Label": "Address Line 1",
+        "addressLine2Label": "Address Line 2 (Optional)",
+        "cityLabel": "City",
+        "stateLabel": "State",
+        "zipCodeLabel": "Zip Code",
+        "employerLabel": "Employer",
+        "occupationLabel": "Occupation",
+        "firstNameValidation": "Please enter your first name",
+        "lastNameValidation": "Please enter your last name",
+        "addressValidation": "Please enter your address",
+        "cityValidation": "Please enter your city",
+        "stateValidation": "Please enter your state",
+        "zipCodeValidation": "Please enter your zip code",
+        "employerValidation": "Please enter your employer",
+        "occupationValidation": "Please enter your occupation",
+        "proceedToPaymentButtonText": "Proceed to Payment",
+        "coverFeesText": "Cover transaction fees",
+        "recurringDonationText": "Make this a recurring monthly donation",
+        "emailLabel": "Email",
+        "phoneNumberLabel": "Phone Number",
+        "emailValidation": "Please enter your email",
+        "invalidEmailValidation": "Please enter a valid email address",
+        "contactEmailText": "Contact me via Email",
+        "contactPhoneText": "Contact me via Phone Call",
+        "contactMailText": "Contact me via Mail",
+        "contactSmsText": "Contact me via SMS",
+        "submitButtonText": "Submit"
       }
     },
     "donateSection": {
