--- a/cloudbuild_cerberus_frontend.yaml
+++ b/cloudbuild_cerberus_frontend.yaml
@@ -1,6 +1,79 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/cerberus-frontend:latest', '.']
+# Install Flutter SDK once and cache it
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  id: 'Install and Cache Flutter SDK'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      if [ -d "/flutter/bin" ] && command -v /flutter/bin/flutter > /dev/null;
+      then
+        echo "Flutter SDK already exists in cache. Skipping download."
+        /flutter/bin/flutter doctor
+      else
+        echo "Flutter SDK not found in cache. Cloning and installing..."
+        apt-get update && apt-get install -y git unzip
+        git clone https://github.com/flutter/flutter.git /flutter
+        git config --global --add safe.directory /flutter
+        cd /flutter
+        git checkout ${_FLUTTER_VERSION}
+        ./bin/flutter --version
+        ./bin/flutter upgrade
+        echo "Running flutter doctor..."
+        ./bin/flutter doctor
+      fi
+
+# Install common dependencies
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  id: 'Install Dependencies'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      apt-get update && apt-get install -y nodejs npm unzip
+      npm install -g firebase-tools@13.11.2
+  waitFor: ['Install and Cache Flutter SDK']
+
+# Build and deploy the cerberus_frontend
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  id: 'Get dependencies for Cerberus Frontend'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+      flutter pub get
   dir: 'cerberus_frontend'
-images:
-- 'gcr.io/$PROJECT_ID/cerberus-frontend:latest'
+  waitFor: ['Install Dependencies']
+
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  id: 'Build Cerberus Frontend'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+      apt-get update && apt-get install -y unzip
+      flutter build web --release
+  dir: 'cerberus_frontend'
+  waitFor: ['Get dependencies for Cerberus Frontend']
+
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  id: 'Deploy Cerberus Frontend'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      apt-get update && apt-get install -y nodejs npm
+      npm install -g firebase-tools@13.11.2
+      npx firebase-tools deploy --only 'hosting:cerberus' --project 'cerberus-data-cloud'
+  waitFor: ['Build Cerberus Frontend']
+
+options:
+  substitution_option: 'ALLOW_LOOSE'
+  volumes:
+    - name: 'flutter_sdk'
+      path: '/flutter'
+substitutions:
+  _PROJECT_ID: 'cerberus-data-cloud'
+  _FLUTTER_VERSION: '3.35.1'
