--- a/cloudbuild_campaigns.yaml
+++ b/cloudbuild_campaigns.yaml
@@ -25,6 +25,7 @@ steps:
     - '--allow-unauthenticated'
     - '--add-cloudsql-instances'
     - '${_INSTANCE_CONNECTION_NAME}'
+    - '--update-secrets=DB_USER=DB_USER:latest,DB_PASS=DB_PASS:latest,DB_NAME=DB_NAME:latest,DB_CONNECTION_NAME=DB_CONNECTION_NAME:latest,FLASK_ENV=FLASK_ENV:latest'
   waitFor: ['Push Backend Docker Image']
 
 # Install Flutter SDK once and cache it
