--- a/universal_campaign_frontend/assets/cox_config.json
+++ b/universal_campaign_frontend/assets/cox_config.json
@@ -130,7 +130,7 @@
       "communityEndorsements": [
         "Laura Latimer",
         "Michael Smith",
-        "Alyssa Hill",
+        "Alyssa Hill"
       ],
       "endorsementCallToAction": "Join the list of supporters!",
       "endorsementCallToActionText": "Fill out the form below to endorse Bea Cox and allow her to publish your endorsement on this page."
