--- a/cerberus_universal_backend/docker-compose.yml
+++ b/cerberus_universal_backend/docker-compose.yml
@@ -35,4 +35,4 @@ services:
       - '5432:5432'
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/01-init.sql
-      - ./database_schema.sql:/docker-entrypoint-initdb.d/02-schema.sql
+      - ./new_database_schema.sql:/docker-entrypoint-initdb.d/02-schema.sql
